[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssim-video-optimizer"
version = "0.1.0"
description = "SSIM-based video encoder optimizer"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "tqdm",
]

[project.scripts]
ssim-video-optimizer = "ssim_video_optimizer.cli:main"
