[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qpreserve"
version = "0.1.0"
description = "SSIM-based video encoder optimizer"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "tqdm",
]

[project.scripts]
qpreserve = "qpreserve.cli:main"

[tool.setuptools]
packages = ["qpreserve"]
